# transfig

./: CMakeLists.txt
fig2dev/: CMakeLists.txt  bound.c  colors.c  fig2dev.c  latex_line.c  trans_spline.c
fig2dev/dev/: CMakeLists.txt  gendxf.c  genepic.c  genibmgl.c  genmf.c  genmp.c  genpictex.c  genps.c  genpstricks.c  genptk.c  genshape.c  gentextyl.c  gentk.c  readpcx.c  readpics.c  readpng.c
transfig/: CMakeLists.txt  mkfile.c  sys.c  transfig.c
